--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Methods for Adding CSS</title>
   </head>
   <body>
-    <div>Style me via the external method!</div>
+    <div>Hi! How are you! Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Methods</button>
+    <p>How should I style this?</p>
   </body>
 </html>
